# iChat

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  chatGUI.py  chatbot.py  iChat.py  requirements.txt  speech2text.py
app/: CMakeLists.txt
app/conf/: context.ini  iCubQA.ini
app/script/: speech_recognition.xml
app/scripts/: iChat.xml.template
modules/: CMakeLists.txt  chatGUI.py  requirements.txt
modules/Sentiment analysis/: Sentiment_analysis_YARP.py
modules/iCubQA/: CMakeLists.txt  iCubQA.py  iCubQA_YARP.py  main.py
modules/sentimentAnalysis/: CMakeLists.txt
modules/speech2text/: CMakeLists.txt  main.py  speech_to_text_YARP.py
src/: CMakeLists.txt  iChat_YARP.py  speech_to_text_YARP
src/Sentiment analysis/: Sentiment_analysis_YARP.py
src/speech2text/: speech_to_text_YARP.py
